Updated Source Code
* Implemented soft error for missing drivers for OpenGL
* Made compatibility layers for older versions of Java for "Xenoverse"